# Dexly

./: .gitignore  README.md  package-lock.json
backend/: Cargo.toml  README.md  example.env
backend/migrations/: 20240601000000_initial_schema.sql
backend/src/: db.rs  main.rs  solana.rs
contracts/: README.md
contracts/perpgo/: Anchor.toml  Dockerfile  README.md  deploy.sh  deploy_devnet.sh  init.sh  package-lock.json  (+2 more)
dexly-frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/: next.config.js  next.config.ts  package-lock.json  package.json
perps/: Anchor.toml  Cargo.toml  DFxvysJQpL48X3AW4tNJASYLDrMBkkiHVG7FFTpPTfNb.json  build.sh  package-lock.json  package.json
perps-backend/: API_ENDPOINTS.md  Cargo.toml  IMPLEMENTATION_ANALYSIS.md  ORACLE_INTEGRATION.md  README.md  STATUS_SUMMARY.md  fix-schema.sql  jest.config.e2e.js  jest.config.js  package-lock.json  package.json  perps-idl.json  setup-db.sh  start-with-env.sh  test-program-id.js  tsconfig.esm.json  tsconfig.json
perps-backend/prisma/: schema.prisma
perps-backend/prisma/migrations/20250521211134_init/: migration.sql
perps-backend/scripts/: seed-markets.ts  test-new-apis.js  test-oracle.js
perps-backend/src/: app.ts  main.rs
perps-backend/src/api/controllers/: auth.controller.ts  market.controller.ts  orderController.ts  pnl.controller.ts  position.controller.ts  stats.controller.ts  trade.controller.ts
perps-backend/src/api/middleware/: validation.middleware.ts
perps-backend/src/api/routes/: auth.routes.ts  index.ts  market.routes.ts  orders.routes.ts  pnl.routes.ts  position.routes.ts  stats.routes.ts  trade.routes.ts
perps-backend/src/api/validation/: trade.validation.ts
perps-backend/src/config/: env.example  index.ts  mod.rs
perps-backend/src/database/: events.rs  markets.rs  mod.rs  orders.rs  positions.rs  schema.rs  transactions.rs  users.rs
perps-backend/src/db/: prisma.ts
perps-backend/src/handlers/: admin.rs  health.rs  markets.rs  mod.rs  orders.rs  positions.rs  users.rs
perps-backend/src/models/: admin.rs  error.rs  market.rs  mod.rs  order.rs  perps.ts  position.rs  transaction.rs  user.rs  vault.rs
perps-backend/src/services/: scheduler.ts
perps-backend/src/services/blockchain/: perpsContractService.ts  solanaClient.ts
perps-backend/src/services/indexer/: eventIndexer.ts
perps-backend/src/services/liquidation/: liquidationMonitor.ts  liquidationService.ts
perps-backend/src/services/market/: enhancedFundingService.ts  fundingRateService.ts
perps-backend/src/services/oracle/: oracleService.ts  pythOracleService.ts
perps-backend/src/services/orders/: orderService.ts
perps-backend/src/services/simulation/: tradeSimulationService.ts
perps-backend/src/services/websocket/: websocketService.ts
perps-backend/src/solana/: client.rs  idl.rs  market.rs  mod.rs  oracle.rs  order.rs  pda.rs  position.rs  user.rs  vault.rs
perps-backend/src/types/: express.d.ts  switchboard.d.ts
perps-backend/tests/: .env.test  README.md  setup-test-env.js  setup.ts  verify-localnet.js
perps-backend/tests/e2e/: connection.e2e.ts  markets.e2e.ts  position-lifecycle.e2e.ts  trade.e2e.ts
perps-backend/tests/utils/: fund-accounts.js  test-accounts.d.ts  test-accounts.js
perps-rust-backend/: Cargo.toml  README.md
perps-rust-backend/src/: lib.rs  main.rs
perps-rust-backend/src/config/: mod.rs
perps-rust-backend/src/handlers/: admin.rs  collateral.rs  global_state.rs  markets.rs  mod.rs  oracle.rs  positions.rs  users.rs
perps-rust-backend/src/models/: error.rs  global_state.rs  market.rs  mod.rs  oracle.rs  position.rs  user.rs
perps-rust-backend/src/solana/: client.rs  error.rs  idl.rs  mod.rs  pda.rs
perps-rust-backend/src/utils/: mod.rs
perps/programs/perps/: Cargo.toml
perps/programs/perps/src/: constants.rs  error.rs  lib.rs
perps/programs/perps/src/instructions/: close_position.rs  deposit_collateral.rs  initialize.rs  liquidate.rs  mod.rs  open_position.rs  order.rs  update_funding.rs  withdraw_collateral.rs
perps/programs/perps/src/oracle/: mod.rs
perps/programs/perps/src/state/: global.rs  market.rs  mod.rs  position.rs  user.rs  vault.rs
perps/programs/perps/src/utils/: amm.rs  funding.rs  math.rs  mod.rs  oracle.rs
(+69 files in other folders)
