[package]
name = "perps-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

anchor-client = "0.24.2"
anchor-lang = { version = "0.24.2", default-features = false }

# Web framework
actix-web = "3.3.3"
actix-cors = "0.5.4"
actix-rt = "2.2.0"

# Async runtime
tokio = { version = "1.14.1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "signal"] }

# Database
sqlx = { version = "0.5.13", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "json", "bigdecimal"] }

# Serialization
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_with = "1.12.0"
borsh = "0.9.3"
base64 = "0.13.0"

# Utilities
anyhow = "1.0.56"
thiserror = "1.0.30"
async-trait = "0.1.52"
log = "0.4.16"
env_logger = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.0"
once_cell = "1.9.0"
subtle = "2.4"
jsonwebtoken = "8.0"

# Required for decoding addresses
bs58 = "0.4.0"

# HTTP client
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"] }

# Queue processing
deadpool = "0.9.2"
deadpool-postgres = "0.10.2"
tokio-postgres = "0.7.6"
futures = "0.3.31"

[features]
default = []
# Disable all price oracles to resolve dependency issues
disable-oracles = [] 
