[package]
name = "perps-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server and routing
actix-web = "4.3.1"
actix-cors = "0.6.4"

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana client and types
solana-sdk = "1.14.18"
solana-client = "1.14.18"
solana-program = "1.14.18"
solana-account-decoder = "1.14.18"
solana-transaction-status = "1.14.18"

# Anchor framework
anchor-client = "0.26.0"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"

# SPL token handling
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"

# Utilities
anyhow = "1.0.71"
thiserror = "1.0.40"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.28.1", features = ["full"] }
dotenv = "0.15.0"
once_cell = "1.17.2"
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
bs58 = "0.4.0"
borsh = "0.10.3"
bincode = "1.3.3"
base64 = "0.21.0"

[lib]
name = "perps_backend"
path = "src/lib.rs"

[[bin]]
name = "perps-backend"
path = "src/main.rs" 