[package]
name = "perps"
version = "0.1.0"
description = "Perpetual Futures Trading Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "perps"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = { version = "=1.16.18", features = ["default"] }
pyth-sdk-solana = "0.8.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
switchboard-v2 = "0.4.0"

[dev-dependencies]
solana-sdk = "=1.16.18"

# Enable stack debugging and optimize for smaller binary size
[profile.release]
overflow-checks = false
lto = true
codegen-units = 1
opt-level = "z"
debug = true  # Enable debug info for stack analysis

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
